# dark-molecule

./: .env  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/: .dockerignore  .env  .env.test  Cargo.toml  Dockerfile  diesel.toml  entrypoint.sh  lo4rs.yml  rustfmt.toml
backend/migrations/2025-01-04-183853_create_users_table/: up.sql
backend/migrations/2025-01-04-183900_create_teams_table/: down.sql  up.sql
backend/migrations/2025-01-04-184033_create_projects_table/: up.sql
backend/migrations/2025-01-04-184231_create_users_projects_table/: down.sql  up.sql
backend/migrations/2025-01-04-184724_create_hosts_table/: up.sql
backend/migrations/2025-01-04-185756_create_issues_table/: up.sql
backend/migrations/2025-01-04-190830_create_users_teams_table/: down.sql  up.sql
backend/migrations/2025-04-09-215546_create_report_templates/: down.sql  up.sql
backend/migrations/2025-04-10-222040_create_poc/: down.sql  up.sql
backend/migrations/2025-04-25-100935_create_scan/: down.sql  up.sql
backend/migrations/2025-05-17-143636_init_db_structure/: down.sql  up.sql
backend/migrations/2025-05-17-144736_add_reports_table/: up.sql
backend/migrations/2025-05-22-181838_add_scans_table/: up.sql
backend/src/: dtos.rs  main.rs  routes.rs  utils.rs
backend/src/db/: mod.rs  schema.rs
backend/src/dtos/: db.rs  handlers.rs  mod.rs
backend/src/handlers/: admin_handlers.rs  auth_handlers.rs  issue_handlers.rs  mod.rs  project_handlers.rs  report_handlers.rs  scan_handlers.rs  team_handlers.rs  template_handlers.rs  user_handlers.rs
backend/src/middleware/: auth.rs  logger.rs  mod.rs
backend/src/models/: host.rs  issue.rs  m_to_m_tables.rs  mod.rs  project.rs  proof_of_concept.rs  report.rs  report_template.rs  scan.rs  team.rs  user.rs
backend/src/routes/: mod.rs
backend/src/services/: mod.rs  nmap_service.rs  nuclei_service.rs  report_service.rs  state.rs
backend/src/services/report/: mod.rs  traits.rs  types.rs
backend/src/services/report/markdown/: service.rs
backend/src/services/scanner/: mod.rs  traits.rs  types.rs
backend/src/services/scanner/gowitness/: mod.rs  service.rs
backend/src/services/scanner/nmap/: mod.rs  service.rs
backend/src/services/scanner/nuclei/: mod.rs  service.rs
backend/src/utils/: config.rs  errors.rs  mod.rs
backend/templates/: report_template.html  report_template.md
frontend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html  index.scss  nginx.conf  package-lock.json  package.json
frontend/src/: README.md  api.rs  main.rs  utils.rs
frontend/src/components/: TheWelcome.vue  add_host_modal.rs  admin_report_templates.rs  admin_settings.rs  admin_sidebar.rs  admin_teams.rs  admin_users.rs  confirm_delete_modal.rs  create_report.rs  create_team_modal.rs  footer.rs  issue_create_form.rs  issue_sidebar.rs  issues_list.rs  login.rs  login_form.rs  mod.rs  navbar.rs  project.rs  project_hosts.rs  project_issues.rs  project_list.rs  project_reports.rs  project_services.rs  project_settings.rs  project_sidebar.rs  report_form.rs  scan_modal.rs  severity_icon.rs
frontend/src/components/scan/: mod.rs  nmap_form.rs  nuclei_form.rs
frontend/src/componets/: mod.rs  project.rs
frontend/src/context/: mod.rs  user_context.rs  user_provider.rs
frontend/src/pages/: admin.rs  admin_create_user.rs  create_project.rs  edit_issue.rs  login.rs  main.rs  mod.rs  not_found.rs  profile.rs  project.rs  projects.rs  register.rs
frontend/src/routes/: admin.rs  main.rs  mod.rs  profile.rs  project.rs
frontend/static/: styles.css
src/: docker-compose.yml
src/backend/: Cargo.toml  Dockerfile
src/backend/src/: main.rs
src/backend/src/dto/: mod.rs
src/backend/src/handlers/: mod.rs  project_hanlers.rs  report_handlers.rs  user_handlers.rs
src/backend/src/models/: company.rs  mod.rs  project.rs  report.rs  user.rs
src/backend/src/routes/: mod.rs
src/backend/src/utils/: mod.rs
src/frontend/: Dockerfile  package.json
templates/: default.md  report_template.html  report_template.md
test/: benchmark.yml
test/artillery/: benchmark.yml  functions.js
