[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-cors = "0.6.4"
env_logger = "0.10.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
derive_more = { version = "2.0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
dotenv = "0.15.0"
validator = { version = "0.20.0", features = ["derive"] }
argon2 = { version = "0.5.3", features = ["std"] }
futures = "0.3"
log4rs = "1.3.0"
# utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
handlebars = "6.3.1"
anyhow = "1.0.97"
time = "0.3.37"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.11"
actix-multipart = "0.7.2"
mime = "0.3.17"
async-trait = "0.1.86"
bcrypt = "0.17.0"
jsonwebtoken = "9.1.0"
utoipa = { version = "5.3.1", features = ["actix_extras", "macros"] }
serde_json = "1.0.140"
rand = "0.8.5"
quick-xml = { version = "0.31.0", features = ["serialize", "overlapped-lists"] }
once_cell = "1.18"
mime_guess = "2.0.5"
tracing = "0.1.41"

[dev-dependencies]
dotenv = "0.15.0"
