[package]
name = "dark-molecule-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
uuid = { version = "1.11.0" , features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js"]}
gloo-net = "0.6.0"
gloo = { version = "0.10.0", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", features = ["Window", "Storage", "Document", "HtmlInputElement"] }