[package]
name = "dark-molecule-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
gloo = { version = "0.9.0", features = ["net"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["serde", "v4", "js"] }
log = "0.4.20"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4", features = ["serde"] }
web-sys = { version = "0.3.64", features = [
    "console",
    "HtmlSelectElement",
    "HtmlElement",
    "Event",
    "EventTarget",
    "InputEvent",
    "HtmlInputElement",
    "SubmitEvent"
]}
gloo-timers = "0.3.0"
gloo-file = "0.3.0"
